# multi_jackal

./: README.md
multi_jackal_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_jackal_base/launch/: jackal_base.launch
multi_jackal_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_jackal_control/config/: jackal_control_config.yaml
multi_jackal_control/launch/: jackal_control.launch
multi_jackal_control/src/: repub_controller.cpp
multi_jackal_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_jackal_description/launch/: jackal_description.launch
multi_jackal_description/urdf/: base_accessories.urdf.xacro  custom_accessories.urdf.xacro  jackal.gazebo  jackal.urdf.xacro  jackal_extras.urdf.xacro
multi_jackal_description/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  novatel_smart6.urdf.xacro  twocams.urdf.xacro
multi_jackal_description/urdf/configs/: twocams
multi_jackal_gazebo/: CMakeLists.txt  package.xml
multi_jackal_gazebo/launch/: jackal_with_gps.launch  one_jackal.launch  rviz.launch  two_jackal.launch
multi_jackal_gazebo/launch/multimaster/: multimaster-gazebo.launch  multimaster-jackal.launch
multi_jackal_gazebo/worlds/: stuff.world
multi_jackal_nav/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_jackal_nav/launch/: jackal_nav.launch
multi_jackal_nav/params/: costmap_common_params.yaml  global_ekf.yaml  local_ekf.yaml
multi_jackal_tutorials/: CHANGELOG.rst  CMakeLists.txt  package.xml
multi_jackal_tutorials/launch/: jackal_with_gps.launch  one_jackal.launch  rviz.launch  two_jackal.launch
multi_jackal_tutorials/rviz/: rviz_config.rviz
my_jackal_base/: CMakeLists.txt  package.xml
my_jackal_base/launch/: jackal_base.launch
my_jackal_control/: CMakeLists.txt  package.xml
my_jackal_control/launch/: jackal_control.launch
my_jackal_description/: CMakeLists.txt  package.xml
my_jackal_description/launch/: jackal_description.launch
my_jackal_description/urdf/: dsto02_jackal_extras.urdf.xacro  jackal.gazebo  jackal.urdf.xacro
my_jackal_description/urdf/accessories/: bridge_plate.urdf.xacro  camera_mount.urdf.xacro  novatel_smart6.urdf.xacro  sick_lms1xx_mount.urdf.xacro
my_jackal_gazebo/: CMakeLists.txt  package.xml
my_jackal_gazebo/launch/: jackal_with_gps.launch  jackals_with_lidars.launch  one_jackal.launch  two_jackal.launch
my_jackal_gazebo/launch/multimaster/: multimaster-gazebo.launch  multimaster-jackal.launch
my_jackal_gazebo/rviz/: rviz_config.rviz
my_jackal_gazebo/worlds/: slow_world.world
my_jackal_nav/: CMakeLists.txt  package.xml
my_jackal_nav/launch/: jackal_nav.launch
my_jackal_nav/params/: NOTES.txt  base_local_planner_params.yaml  move_base_params.yaml
my_jackal_nav/params/odom_nav_params/: global_costmap_params.yaml
