<package>
  <name>multi_jackal_tutorials</name>
  <version>0.4.2</version>
  <description>Jackal simulation for Gazebo</description>
  
  <maintainer email="nick.dave.sullivan@gmail.com">Nick Sullivan</maintainer>
  <author     email="nick.dave.sullivan@gmail.com">Nick Sullivan</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>multi_jackal_base</run_depend>
</package>
