<?xml version="1.0"?>
<package>
  <name>my_jackal_base</name>
  <version>0.0.0</version>
  <description>Launch a Jackal</description>
  <maintainer email="nicholas.sullivan@adelaide.edu.au">Nick Sullivan</maintainer>
  <author email="nicholas.sullivan@adelaide.edu.au">Nick Sullivan</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>my_jackal_control</run_depend>
  <run_depend>my_jackal_description</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>jackal_desktop</run_depend>
  <run_depend>jackal_simulator</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <export>
  </export>
</package>
